kubernetes-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-node-app-deployment
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: my-node-app
  template:
    metadata:
      labels:
        app: my-node-app
    spec:
      containers:
        - name: node-app-container
          image: 357186326329.dkr.ecr.eu-west-3.amazonaws.com/nodejs-eks-app-repo:f57a428-55
          ports:
            - containerPort: 3001
          resources:
            limits:
              memory: "256Mi"
              cpu: "512m"
            requests:
              memory: "128Mi"
              cpu: "256m"
